fix: Some "About" overlapping fixed

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ a {
 }
 
 .navbar__logo {
-  margin-top: 2px;
+  margin-top: 5%;
   height: 90%;
 }
 
@@ -71,7 +71,7 @@ a {
 
 .welcome {
   width: 100%;
-  height: 100vh;
+  height: 90%;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -112,9 +112,9 @@ a {
 }
 
 .welcome__subtitle {
-  padding-top: 40px;
-  padding-bottom: 80px;
-  margin-bottom: 100px;
+  padding-top: 2.5%;
+  padding-bottom: 3%;
+  margin-bottom: 3%;
   font-size: 3rem;
   text-align: center;
   color: var(--white-font);
@@ -157,8 +157,8 @@ a {
   padding-bottom: 2.5%;
 }
 
-.main-footer__header {
-  padding-top: 15px;
+.main-footer__section {
+  padding-top: 2%;
 }
 
 .main-footer__separator {
@@ -190,6 +190,10 @@ a {
     padding-top: 80px;
     padding-bottom: 100px;
     font-size: 2.5rem;
+  }
+
+  .main-footer__section {
+    padding-top: 4%;
   }
 
   .about {
